hoan thien login

--- a/WebThueXe1/web/WEB-INF/web.xml
+++ b/WebThueXe1/web/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <welcome-file-list>
+        <welcome-file>login.html</welcome-file>
+    </welcome-file-list>
     <context-param>
         <param-name>username</param-name>
         <param-value>abc</param-value>
@@ -21,20 +24,12 @@
         </init-param>
     </servlet>
     <servlet>
-        <servlet-name>CalServlet</servlet-name>
-        <servlet-class>controller.CalServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>WelcomeServlet</servlet-name>
         <servlet-class>controller.WelcomeServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/Login</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>CalServlet</servlet-name>
-        <url-pattern>/CalServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>WelcomeServlet</servlet-name>
