--- a/WebThueXe1/web/WEB-INF/web.xml
+++ b/WebThueXe1/web/WEB-INF/web.xml
@@ -1,39 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <welcome-file-list>
-        <welcome-file>login.html</welcome-file>
-    </welcome-file-list>
-    <context-param>
-        <param-name>username</param-name>
-        <param-value>abc</param-value>
-    </context-param>
-    <context-param>
-        <param-name>password</param-name>
-        <param-value>123</param-value>
-    </context-param>
     <servlet>
-        <servlet-name>Login</servlet-name>
-        <servlet-class>controller.Login</servlet-class>
-        <init-param>
-            <param-name>username</param-name>
-            <param-value>abc</param-value>
-        </init-param>
-        <init-param>
-            <param-name>password</param-name>
-            <param-value>12345</param-value>
-        </init-param>
+        <servlet-name>AddCategoryController</servlet-name>
+        <servlet-class>controller.manager.AddCategoryController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>WelcomeServlet</servlet-name>
-        <servlet-class>controller.WelcomeServlet</servlet-class>
+        <servlet-name>AccountManagementController</servlet-name>
+        <servlet-class>controller.manager.AccountManagementController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>Login</servlet-name>
-        <url-pattern>/Login</url-pattern>
+        <servlet-name>AddCategoryController</servlet-name>
+        <url-pattern>/add-category</url-pattern>
     </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
     <servlet-mapping>
-        <servlet-name>WelcomeServlet</servlet-name>
-        <url-pattern>/WelcomeServlet</url-pattern>
+        <servlet-name>AccountManagementController</servlet-name>
+        <url-pattern>/account-management</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
